--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "spritz",
-  "version": "0.0.1",
-  "description": "initalize zustand stores with react context",
-  "main": "index.js",
+  "name": "zustand-di",
+  "version": "0.0.2",
+  "description": "initialize zustand stores with react context",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsup",
+    "dev": "vitest --watch"
   },
   "keywords": [
     "zustand",
@@ -12,11 +13,19 @@
     "context",
     "dependency-injection"
   ],
-  "author": "",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "author": "Charles Kornoelje",
   "license": "MIT",
+  "peerDependencies": {
+    "react": "^18.2.0",
+    "zustand": "^4.1.5"
+  },
   "devDependencies": {
     "@types/react": "^18.0.26",
     "react": "^18.2.0",
+    "tsup": "^6.5.0",
+    "typescript": "^4.9.4",
     "zustand": "^4.1.5"
   }
 }
