--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "zustand": "^4.1.5"
   },
   "devDependencies": {
-    "@types/react": "^18.0.26",
-    "react": "^18.2.0",
-    "tsup": "^6.5.0",
-    "typescript": "^4.9.4",
-    "zustand": "^4.1.5"
+    "@types/react": "18.0.26",
+    "react": "18.2.0",
+    "tsup": "6.5.0",
+    "typescript": "4.9.4",
+    "zustand": "4.1.5"
   }
 }
