update readme sizes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,9 +3,11 @@
     "target": "esnext",
     "strict": true,
     "esModuleInterop": true,
-    "moduleResolution": "node",
+    "module": "esnext",
+    "moduleResolution": "Bundler",
     "noUncheckedIndexedAccess": true,
     "exactOptionalPropertyTypes": true,
+    "noEmit": true,
     "baseUrl": ".",
   },
   "include": ["src/**/*", "tests/**/*"],
