--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "esnext",
     "strict": true,
+    "jsx": "react-jsx",
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "Bundler",
