--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "author": "Charles Kornoelje",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^18.2.0",
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "zustand": "^4.4.0"
   },
   "devDependencies": {
