--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
   "author": "Charles Kornoelje",
   "license": "MIT",
   "peerDependencies": {
-    "react": "^18.2.0",
-    "zustand": "^4.1.5"
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
     "@size-limit/preset-small-lib": "9.0.0",
