--- a/package.json
+++ b/package.json
@@ -43,6 +43,11 @@
     "vitest": "0.34.4",
     "zustand": "4.4.1"
   },
+  "files": [
+    "dist",
+    "README.md",
+    "package.json"
+  ],
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "zustand": "^4.4.0"
