--- a/size/package.json
+++ b/size/package.json
@@ -9,16 +9,15 @@
     "@size-limit/preset-small-lib": "11.0.1",
     "size-limit": "11.0.1"
   },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
+    "zustand": "^4.4.0"
+  },
   "size-limit": [
     {
       "limit": "400 B",
       "path": "../dist/index.js",
-      "gzip": true,
-      "ignore": [
-        "react",
-        "react-dom",
-        "zustand"
-      ]
+      "gzip": true
     }
   ]
 }
