--- a/package.json
+++ b/package.json
@@ -24,10 +24,13 @@
   "author": "Charles Kornoelje",
   "type": "module",
   "exports": {
-    ".": {
+    "import": {
       "types": "./dist/index.d.ts",
-      "require": "./dist/index.cjs",
-      "import": "./dist/index.js"
+      "default": "./dist/index.js"
+    },
+    "require": {
+      "types": "./dist/index.d.cts",
+      "default": "./dist/index.cjs"
     }
   },
   "main": "./dist/index.cjs",
