--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,3 +26,5 @@ jobs:
       # Only works if you set `reportOnFailure: true` in your vite config as specified above
       if: always()
       uses:  davelosert/vitest-coverage-report-action@v2
+      with:
+        vite-config-path: "./tests/vitest.config.ts"
