--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,6 +15,8 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: pnpm/action-setup@v2
+      with:
+        version: 8
     - name: 'Install Node'
       uses: actions/setup-node@v4
     - name: 'Install Deps'
