--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,4 +29,4 @@ jobs:
       if: always()
       uses:  davelosert/vitest-coverage-report-action@v2
       with:
-        vite-config-path: "./tests/vitest.config.ts"
+        working-directory: ./tests
