add peer deps meta

--- a/package.json
+++ b/package.json
@@ -57,5 +57,13 @@
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "zustand": "^4.4.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": false
+    },
+    "zustand": {
+      "optional": false
+    }
   }
 }
