--- a/package.json
+++ b/package.json
@@ -48,14 +48,22 @@
     "test:ci": "pnpm --filter tests test:ci"
   },
   "devDependencies": {
-    "@types/react": "18.2.46",
+    "@types/react": "18.2.74",
     "react": "18.2.0",
-    "tsup": "8.0.1",
-    "typescript": "5.3.3",
-    "zustand": "4.4.7"
+    "tsup": "8.0.2",
+    "typescript": "5.4.4",
+    "zustand": "4.5.2"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
     "zustand": "^4.4.0"
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": false
+    },
+    "zustand": {
+      "optional": false
+    }
   }
 }
