--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,7 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x, 20.x]
-        zustand: [latest, 5.0.0-alpha.6] # [latest, 4.2.0, 4.0.0, 5.0.0-alpha.6]
+        zustand: [latest, next] # [latest, 4.2.0, 4.0.0, next]
 
     steps:
       - uses: actions/checkout@v4
