--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "zustand": "^4.4.0"
+    "zustand": "^4.4.0 || ^5.0.0"
   },
   "peerDependenciesMeta": {
     "react": {
