--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -16,14 +16,27 @@ jobs:
     - uses: actions/checkout@v4
     - uses: pnpm/action-setup@v4
       with:
-        version: 8
-    - name: 'Install Node'
+        version: latest
+        run_install: false
+    - name: Install Node
       uses: actions/setup-node@v4
-    - name: 'Install Deps'
+    - name: Get pnpm store directory
+      shell: bash
+      run: |
+        echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
+
+    - uses: actions/cache@v4
+      name: Setup pnpm cache
+      with:
+        path: ${{ env.STORE_PATH }}
+        key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+        restore-keys: |
+          ${{ runner.os }}-pnpm-store-
+    - name: Install Deps
       run: pnpm install
-    - name: 'Test'
+    - name: Test
       run: pnpm test
-    - name: 'Report Coverage'
+    - name: Report Coverage
       # Set if: always() to also generate the report if tests are failing
       # Only works if you set `reportOnFailure: true` in your vite config as specified above
       if: always()
