--- a/package.json
+++ b/package.json
@@ -48,15 +48,15 @@
     "test:ci": "pnpm --filter tests test:ci"
   },
   "devDependencies": {
-    "@types/react": "18.2.74",
-    "react": "18.2.0",
+    "@types/react": "18.3.3",
+    "react": "18.3.1",
     "tsup": "8.0.2",
-    "typescript": "5.4.4",
+    "typescript": "5.4.5",
     "zustand": "4.5.2"
   },
   "peerDependencies": {
     "react": "^16.8.0 || ^17.0.0 || ^18.0.0",
-    "zustand": "^4.4.0"
+    "zustand": "^4.4.0 || ^5.0.0"
   },
   "peerDependenciesMeta": {
     "react": {
