update package description

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "zustand-di",
   "version": "0.0.15",
   "private": false,
-  "description": "initialize zustand stores with react context",
+  "description": "dependency injection for zustand with react context",
   "keywords": [
     "zustand",
     "react",
